--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>html basic</title>
   </head>
   <body>
+    <!--H and p tags-->
+
+    <h1>Welcome</h1>
+    <p>Hii there. <i>How are You</i>.</p>
+    <!--doing italic text-->
+    <h1>Welcome</h1>
+    <p>Hii there. <strong>How are You</strong>.</p>
+    <!--doing bold text-->
+    <h1>Welcome</h1>
+    <p>Hii there. <em>How are You</em>.</p>
+    <!--The <em> tag is used to define emphasized text. The content inside is typically displayed in italic.-->
+
     <!--HTML 5 ENTITIES-->
     <h1>Html 5 entities&lt;</h1>
     <h1>copyright&copy;</h1>
