--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <!--HTML 5 ENTITIES-->
     <h1>Html 5 entities&lt;</h1>
     <h1>copyright&copy;</h1>
+
+    <!--Images and videos-->
   </body>
 </html>
