images and videos

--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
     <h1>copyright&copy;</h1>
 
     <!--Images and videos-->
+    <img src =
+    "https://www.pexels.com/photo/a-black-and-white-photo-of-a-spiral-22743820/"
+    alt = spiral-image">
+
+    <video
+      controls
+      width="10rem"
+      height="10rem"
+      src="https://www.pexels.com/video/above-the-clouds-in-mountains-timelapse-20687323/"
+    ></video>
   </body>
 </html>
