--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
       height="10rem"
       src="https://www.pexels.com/video/above-the-clouds-in-mountains-timelapse-20687323/"
     ></video>
+
+    <!--anchor tag-->
+    <h1>Hello!, there is a link</h1>
+    <a href="https://www.google.com/">Google</a>
   </body>
 </html>
