--- a/index.html
+++ b/index.html
@@ -37,5 +37,27 @@
     <!--anchor tag-->
     <h1>Hello!, there is a link</h1>
     <a href="https://www.google.com/">Google</a>
+
+    <!--Forms-->
+    <form>
+      <label for="user">Username</label>
+      <input
+        autofocus
+        maxlength="20"
+        minlength="6"
+        name="user"
+        type="text"
+        id="user"
+        placeholder="write your name"
+      />
+      <label for="email-id">Email</label>
+      <input name="email-id" type="email" id="email-id" />
+      <select name="product" id="product">
+        <option value=" mackbook">Mackbook</option>
+        <option value=" iphone">I phone</option>
+      </select>
+      <textarea name="message " id="message" colls="30" rows="20"></textarea>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
