unordered and ordered lists

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
     <h1>Hello!, there is a link</h1>
     <a href="https://www.google.com/">Google</a>
 
+    <!--Lists-->
+    <h1>Lists</h1>
+    <ol>
+      <li>Chapter 1</li>
+      <li>Chapter 2</li>
+      <li>Chapter 3</li>
+    </ol>
+
+    <ul>
+      <li>Home</li>
+      <li>Home</li>
+      <li>Home</li>
+      <li>Home</li>
+    </ul>
+
     <!--Forms-->
     <form>
       <label for="user">Username</label>
