table and header

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
       <li>Home</li>
     </ul>
 
+    <!--Tables and headers-->
+    <table>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Age</th>
+      </tr>
+
+      <tr>
+        <td>hema</td>
+        <td>Sheikh</td>
+        <td>45</td>
+      </tr>
+    </table>
     <!--Forms-->
     <form>
       <label for="user">Username</label>
