--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <!--H and p tags-->
 
-    <h1>Welcome</h1>
-    <p>Hii there. <i>How are You</i>.</p>
+    <h1 class="welcome">Welcome</h1>
+    <p id="paragraph">Hii there. <i>How are You</i>.</p>
     <!--doing italic text-->
     <h1>Welcome</h1>
     <p>Hii there. <strong>How are You</strong>.</p>
