--- a/index.html
+++ b/index.html
@@ -88,5 +88,14 @@
       <textarea name="message " id="message" colls="30" rows="20"></textarea>
       <button type="submit">Submit</button>
     </form>
+
+    <!--HTML semantic-->
+    <footer>
+      <p>created by abc</p>
+      <ul>
+        <li><a href="www.twitter.com">Twitter</a></li>
+        <li><a href="www.youtube.com">Youtube</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
